COMPLETE  MVC App Assignment Part 8
StudentMVC
- ADD Instructor.cshtml view

HomeController.cs
- ADD Instructor Action with one parameter

--- a/StudentMVC/StudentMVC/StudentMVC.csproj
+++ b/StudentMVC/StudentMVC/StudentMVC.csproj
@@ -163,6 +163,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Instructors.cshtml" />
+    <Content Include="Views\Home\Instructor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
