COMPLETE MVC Sample Application Part 8
NewsletterAppMVC

HomeController.cs
- REMOVE Contact method
- REMOVE About method
- ADD Admin method

Views
- ADD Admin.cshtml
- REMOVE Contact.cshtml
- REMOVE About.cshtml

Admin.cshtml
- ADD Card display all signups

Readme.md
- UPDATE Added tutorial description

--- a/NewsletterAppMVC/NewsletterAppMVC/NewsletterAppMVC.csproj
+++ b/NewsletterAppMVC/NewsletterAppMVC/NewsletterAppMVC.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\NewsletterSignUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -188,14 +189,12 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Success.cshtml" />
+    <Content Include="Views\Home\Admin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
