COMPLETE Entity Framework Tutorial Part 4:
NewsletterAppMVC:
- REMOVED SocialSecurityNumber from db_Newsletter database
- ADD Removed to the db_Newsletter database as a DateTime column
- ADD AdminController.cs to Controllers folder

CONTROLLERS

HomeController.cs
- REMOVE Admin Method()

AdminController.cs
- ADD Admin Method() from HomeController.cs

VIEWS

Admin.cshtml:
- REMOVE Admin.cshtml

VIEWS/ADMIN/Index.cshtml:
- ADD Code from Admin.cshtml to Index.cshtml

Readme.md:
- UPDATE Add tutorial description

--- a/NewsletterAppMVC/NewsletterAppMVC/NewsletterAppMVC.csproj
+++ b/NewsletterAppMVC/NewsletterAppMVC/NewsletterAppMVC.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -236,7 +237,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Success.cshtml" />
-    <Content Include="Views\Home\Admin.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
