--- a/NewsletterAppMVC/NewsletterAppMVC/bin/NewsletterAppMVC.dll.config
+++ b/NewsletterAppMVC/NewsletterAppMVC/bin/NewsletterAppMVC.dll.config
@@ -65,7 +65,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="db_NewsletterEntities" connectionString="metadata=res://*/Newsletter.csdl|res://*/Newsletter.ssdl|res://*/Newsletter.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PROFSFRINK-PC\SQLEXPRESS;initial catalog=db_Newsletter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="db_NewsletterEntities" connectionString="metadata=res://*/Models.Newsletter.csdl|res://*/Models.Newsletter.ssdl|res://*/Models.Newsletter.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PROFSFRINK-PC\SQLEXPRESS;initial catalog=db_Newsletter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
