--- a/CarInsurance/CarInsurance/CarInsurance.csproj
+++ b/CarInsurance/CarInsurance/CarInsurance.csproj
@@ -152,6 +152,7 @@
       <DependentUpon>InsuranceEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AllQuotes.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Insurance.mdf" />
