--- a/CarInsurance/CarInsurance/CarInsurance.csproj
+++ b/CarInsurance/CarInsurance/CarInsurance.csproj
@@ -218,6 +218,7 @@
     <Content Include="Views\Insuree\Edit.cshtml" />
     <Content Include="Views\Insuree\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Home\Success.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
