--- a/CodeFirstDbAssign/CodeFirstDbAssign/CodeFirstDbAssign.csproj
+++ b/CodeFirstDbAssign/CodeFirstDbAssign/CodeFirstDbAssign.csproj
@@ -53,8 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Grade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchoolContext.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
